--- a/Web Development/HTML_personal_site/index.html
+++ b/Web Development/HTML_personal_site/index.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Overview</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <!-- Note that formatting should be done in CSS, but for tutorial sake -->
@@ -40,6 +41,9 @@
     <li><a href="https://codepen.io/">CodePen</a></li>
     <li><a href="https://unicode-table.com/en/">Unicode Table</a></li>
     <li><a href="http://crop-circle.imageonline.co/">Crop-circle</a></li>
+    <li><a href="https://colorhunt.co//">Color Hunt</a></li>
+    <li><a href="https://chrome.google.com/webstore/detail/pesticide-for-chrome-with/neonnmencpneifkhlmhmfhfiklgjmloi">Pesticide</a></li>
+
   </ol>
 
 <!-- TABLE EXAMPLE -->
