--- a/Web Development/starter_site/index.html
+++ b/Web Development/starter_site/index.html
@@ -13,13 +13,19 @@
   <table cellspacing=20>
     <tr>
       <td>
-        <img src="https://image.shutterstock.com/image-vector/logo-vector-html-5-low-600w-1601607721.jpg"
-        alt="An alternative description of image if it doesn't load." height="200px">
+        <img class="mountain circular"
+        src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/279/snow-capped-mountain_1f3d4-fe0f.png"
+        alt="an image from emojipedia of a mountain.">
       </td>
       <td>
-        <h1>A reminder of core HTML functionality </h1>
+        <h1 id="heading">A reminder of core HTML functionality </h1>
         <p><em>Re-covering the basics of HTML.</em></p>
         <p> This is just a short introduction, nothing too complicated yet.</p>
+      </td>
+      <td style="vertical-align:top;">
+        <img class="logo"
+        src="https://image.shutterstock.com/image-vector/logo-vector-html-5-low-600w-1601607721.jpg"
+        alt="An alternative description of image if it doesn't load." height="80px">
       </td>
     </tr>
   </table>
@@ -88,6 +94,7 @@
   Checkbox: <input type="checkbox" name=""><br>
   Password: <input type="password" name=""><br>
 </form>
+
 
 </body>
 
