finished intermediate CSS lesson - simple personal profile page

--- a/Web Development/starter_site/index.html
+++ b/Web Development/starter_site/index.html
@@ -49,6 +49,8 @@
     <li><a href="http://crop-circle.imageonline.co/">Crop-circle</a></li>
     <li><a href="https://colorhunt.co//">Color Hunt</a></li>
     <li><a href="https://chrome.google.com/webstore/detail/pesticide-for-chrome-with/neonnmencpneifkhlmhmfhfiklgjmloi">Pesticide</a></li>
+    <li><a href="https://www.favicon.cc/">Favicon cc</a></li>
+
 
   </ol>
 
