--- a/Web Development/bootstrap5_installation_example/index.html
+++ b/Web Development/bootstrap5_installation_example/index.html
@@ -10,7 +10,34 @@
 
     <title>Hello, world!</title>
   </head>
+
   <body>
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+       <a class="navbar-brand" href="#">Brand</a>
+
+       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+           <span class="navbar-toggler-icon"></span>
+         </button>
+
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="">Contact  </a>
+                </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="">Product  </a>
+                </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="">Download</a>
+                </li>
+            </ul>
+        </div>
+
+    </nav>
+
+    <!-- CONTENT -->
     <h1>Hello, world!</h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
