made minor format changes to CSS/HTML

--- a/FrontendMentor - sunnyside challenge/index.html
+++ b/FrontendMentor - sunnyside challenge/index.html
@@ -59,11 +59,12 @@
   <h1 class="hero-text">
     WE ARE CREATIVES
     <br></br>
-    <img src="images/icon-arrow-down.svg"></img>
+    <img src="images/icon-arrow-down.svg" alt="arrow-down"></img>
   </h1>
 
 </div>
 
+<main>
 <!-- GRID SECTION -->
 <section class="colorGrid">
   <div class="container-fluid">
@@ -75,7 +76,7 @@
           We are a full-service creative agency specializing in helping brands grow fast.
           Engage your clients through compelling visuals that do most of the marketing for you.
         </p>
-        <h4><span class="learn-more">LEARN MORE  </span></h4>
+        <div><span class="learn-more">LEARN MORE  </div>
       </div>
       <div class="col-lg-6 card image-grid-cover" id="image1">
       </div>
@@ -89,7 +90,7 @@
         <p>
         Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.
         </p>
-        <h4><span class="learn-more2">LEARN MORE  </span></h4>
+        <span class="learn-more2">LEARN MORE  </span>
       </div>
     </div>
 
@@ -123,7 +124,7 @@
     <div class="row">
 
       <div class="col-lg-4 testimonial">
-        <img class="testimonial-image" src="images/image-emily.jpg"></img>
+        <img class="testimonial-image" src="images/image-emily.jpg" alt="emily-profile"></img>
         <p>
         We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
         </p>
@@ -132,7 +133,7 @@
       </div>
 
       <div class="col-lg-4 testimonial">
-        <img class="testimonial-image" src="images/image-thomas.jpg"></img>
+        <img class="testimonial-image" src="images/image-thomas.jpg" alt="thomas-profile"></img>
         <p>
         Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
         </p>
@@ -141,7 +142,7 @@
       </div>
 
       <div class="col-lg-4 testimonial">
-        <img class="testimonial-image" src="images/image-jennie.jpg"></img>
+        <img class="testimonial-image" src="images/image-jennie.jpg" alt="jennie-profile"></img>
         <p>
         Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
         </p>
@@ -157,17 +158,17 @@
   <div class="container-fluid">
 
     <div class="row">
-        <div class="col-lg-3 col-sm-6 card"><img class="gallery-image" src="images/desktop/image-gallery-milkbottles.jpg"></img></div>
-        <div class="col-lg-3 col-sm-6 card"><img class="gallery-image" src="images/desktop/image-gallery-orange.jpg"></img></div>
-        <div class="col-lg-3 col-sm-6 card"><img class="gallery-image" src="images/desktop/image-gallery-cone.jpg"></img></div>
-        <div class="col-lg-3 col-sm-6 card"><img class="gallery-image" src="images/desktop/image-gallery-sugarcubes.jpg"></img></div>
+        <div class="col-lg-3 col-sm-6 card"><img class="gallery-image" src="images/desktop/image-gallery-milkbottles.jpg" alt="milkbottles"></img></div>
+        <div class="col-lg-3 col-sm-6 card"><img class="gallery-image" src="images/desktop/image-gallery-orange.jpg" alt="orange"></img></div>
+        <div class="col-lg-3 col-sm-6 card"><img class="gallery-image" src="images/desktop/image-gallery-cone.jpg" alt="cone"></img></div>
+        <div class="col-lg-3 col-sm-6 card"><img class="gallery-image" src="images/desktop/image-gallery-sugarcubes.jpg" alt="sugarcubes"></img></div>
     </div>
 
   </div>
 
 </section>
 
-
+</main>
 <footer>
   <div class="container-fluid">
 
